--- a/WD_PS1/Task3/style.css
+++ b/WD_PS1/Task3/style.css
@@ -9,28 +9,15 @@ body {
 
 .header {
     width: 100%;
-    height: 60px;
-    z-index: 3;
+    height: 80px;
     font-size: 2rem;
     color: black;
     font-weight: normal;
     font-family: Helvetica, sans-serif;
     text-align: right;
-
-}
-
-#headerInner {
-
-    position: relative;
-    border: 0px solid #333;
-    width: 1200px;
-    height: 60px;
-    margin: 0 auto;
-    margin-top: 0px;
 }
 
 .topMenuRight {
-    height: 60px;
     position: relative;
     left: 0px;
     right: 20px;
@@ -40,11 +27,21 @@ body {
 
 .topMenuRight ul li {
     float: right;
+    position: center;
     height: 60px;
 }
 
-nav a {
-    text-decoration: none;
+.topMenuLeft {
+    position: relative;
+    left: 0px;
+    right: 0px;
+    top: 0px;
+}
+
+
+.topMenuLeft ul li {
+    float: left;
+    position: center;
 }
 
 nav ul {
@@ -55,37 +52,25 @@ nav ul {
 nav li {
     list-style-position: inside;
     padding: 40px;
+    vertical-align: center;
 }
 
-
-.content {
-    display: flex;
-    border: 5px solid #ff3366;
-    /*height: 3000px;*/
-}
-
-.content .column {
+.wrapper {
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
-    align-items: stretch;
-    align-content: stretch;
-    font-size: 5rem;
-    color: blue;
-    font-weight: bold;
-    font-family: Helvetica, sans-serif;
-    text-align: center;
+    width: 100%;
+    height: 1000px;
 }
 
-.content .column:first-of-type {
-    background-color: #16a085;
-    flex-grow: 1;
-
+.wrapper.contentFirst {
+    background-color: #1abc9c;
+    height: 500px;
 }
 
-.content .column:last-of-type {
-    background-color: #2980b9;
-    flex-grow: 3;
+.wrapper.contentSecond {
+    display: flex;
+    flex-direction: row;
+    height: 400px;
 
 }
 
@@ -93,8 +78,9 @@ nav li {
     position: fixed;
     bottom: 0;
     width: 100%;
-    border: 5px solid #ff3366;
-    background-color: #1abc9c;
+    height: 500px;
+    border: none;
+    background-color: #16a085;
     font-size: 5rem;
     color: blue;
     font-weight: bold;
