--- a/WD_PS1/Task3/css/style.css
+++ b/WD_PS1/Task3/css/style.css
@@ -1,10 +1,6 @@
 body {
 }
 
-* {
-    box-sizing: border-box;
-}
-
 .wrapper {
     width: 100%;
 }
@@ -18,14 +14,12 @@ body {
     color: black;
     font-weight: normal;
     font-family: Helvetica, sans-serif;
-    /*text-align: right;*/
 }
 
 .wrapper .header .column_left {
     flex-grow: 1;
     text-align: center;
     left: 40px;
-    /*font-size: 30px;*/
 }
 
 .wrapper .header .column_Right {
@@ -58,23 +52,31 @@ nav li {
 }
 
 .wrapper .content {
+    font-family: Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
 }
 
 .wrapper .content .content_top {
     display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    width: 100%;
     height: 800px;
     background-color: #16a085;
-
-
 }
 
 .wrapper .content .content_top .column {
     navbutton_background_color: #1abc9c;
+    margin-top: 100px;
+    font-size: 35px;
+    width: 50%;
+}
+
+.top_content_header {
+    font-size: 45px;
+}
+
+.top_content {
+    position: absolute;
+    margin-top: 70px;
 }
 
 .wrapper .content .content_top .column .buy_now {
@@ -83,25 +85,27 @@ nav li {
     padding: 5px;
     border-radius: 5px;
     border: 2px solid #fff;
+    width: 250px;
+    height: 60px;
+    font-size: 30px;
+    margin-top: 350px;
+    justify-content: center;
 }
 
-.wrapper .content.content_top .column:first-of-type {
-    flex: 1;
-
-}
+/*.wrapper .content.content_top .column:first-of-type {*/
+/*}*/
 
 .image {
-    margin: 40px 0px 70px 40px;
-    height: 700px;
+    height: 600px;
+    position: absolute;
+    margin: 0 0 0 300px;
 }
 
 .wrapper .content .content_top .column:last-of-type {
-    flex: 1;
     color: #fff;
-    justify-content: center;
-
+    text-align: justify;
+    width: 50%;
 }
-
 
 .wrapper .content .content_center {
     display: flex;
@@ -109,18 +113,28 @@ nav li {
     height: 500px;
     text-align: center;
     justify-content: center;
+    margin: 50px;
 }
 
 .wrapper .content .content_center .column {
     flex-grow: 1;
 }
 
+.fa {
+    color: #ffffff;
+    background-color: #1abc9c;
+    padding: 30px;
+    border-radius: 120px;
+    margin-bottom: 30px;
+}
+
 .content_header {
-    font-size: 30px;
+    font-size: 40px;
+    margin-top: 200px;
 }
 
 .column_content {
-    font-size: 20px;
+    font-size: 28px;
 }
 
 .wrapper .content .content_bottom {
@@ -133,7 +147,6 @@ nav li {
     align-items: center;
     justify-content: center;
     text-align: center;
-
 }
 
 .wrapper .content .content_bottom .form_question .button_submit {
@@ -147,10 +160,6 @@ nav li {
     font-size: 20px;
     margin-top: 15px;
     justify-content: center;
-}
-
-.form_question {
-
 }
 
 .myInput {
