Task 3 move inline style to file style.css

--- a/WD_PS1/Task3/css/style.css
+++ b/WD_PS1/Task3/css/style.css
@@ -16,7 +16,12 @@ body {
     font-family: Helvetica, sans-serif;
 }
 
+strong {
+    color: #1abc9c
+}
+
 .wrapper .header .column_left {
+
     flex-grow: 1;
     text-align: center;
     left: 40px;
