task 3 added cursor:pointer; task 4 custom checkbox, task4 completed

--- a/WD_PS1/Task3/css/style.css
+++ b/WD_PS1/Task3/css/style.css
@@ -104,6 +104,7 @@ nav li {
 .wrapper .content .content_top .column_right .buy_now {
     color: #fff;
     background-color: #16a085;
+    cursor: pointer;
     position: relative;
     padding: 5px;
     border-radius: 5px;
@@ -171,6 +172,7 @@ nav li {
 .wrapper .content .content_bottom .form_question .button_submit {
     color: #fff;
     background-color: #1abc9c;
+    cursor: pointer;
     width: 250px;
     height: 60px;
     padding: 5px;
