--- a/WD_PS1/Task1/css/style.css
+++ b/WD_PS1/Task1/css/style.css
@@ -10,7 +10,7 @@ body {
     font-size: 4rem;
     color: white;
     font-weight: bold;
-    font-family: Helvetica;
+    font-family: Helvetica, sans-serif;
     text-align: center;
 }
 
