--- a/WD_PS2/Task1/css/style.css
+++ b/WD_PS2/Task1/css/style.css
@@ -49,6 +49,23 @@ body {
     align-items: center;
 }
 
+.button_calculate {
+    margin-left: auto;
+    margin-right: auto;
+    background-color: darkgrey;
+    color: #3498db;
+    cursor: pointer;
+    width: 400px;
+    height: 80px;
+    padding: 5px;
+    border-radius: 5px;
+    border: 2px solid #fff;
+    font-size: 55px;
+    font-weight: bolder;
+    margin-top: 15px;
+    justify-content: center;
+}
+
 .answer {
     margin-top: 50px;
     font-size: 30px;
