--- a/WD_PS1/Task3/css/style.css
+++ b/WD_PS1/Task3/css/style.css
@@ -14,10 +14,13 @@ body {
     color: black;
     font-weight: normal;
     font-family: Helvetica, sans-serif;
+    letter-spacing: 0;
+    word-spacing: 0;
 }
 
 strong {
-    color: #1abc9c
+    color: #1abc9c;
+    letter-spacing: 1px;
 }
 
 .wrapper .header .column_left {
@@ -65,11 +68,17 @@ nav li {
     display: flex;
     height: 800px;
     background-color: #16a085;
+
 }
 
 .wrapper .content_top .column_left {
     margin-top: 100px;
     width: 50%;
+}
+
+.wrapper .content_top .column_left .image {
+    margin-right: 10px;
+    overflow: hidden;
 }
 
 .wrapper .content .content_top .column_right {
@@ -127,7 +136,7 @@ nav li {
 .wrapper .content .content_center {
     display: flex;
     flex-direction: row;
-    height: 500px;
+    height: auto;
     text-align: center;
     justify-content: center;
     margin: 50px;
