--- a/WD_PS2/Task1/css/style.css
+++ b/WD_PS2/Task1/css/style.css
@@ -62,13 +62,22 @@ body {
     border: 2px solid #fff;
     font-size: 55px;
     font-weight: bolder;
-    margin-top: 15px;
+    margin-top: 50px;
     justify-content: center;
 }
 
 .answer {
     margin-top: 50px;
     font-size: 30px;
+    color: blue;
+    font-weight: bold;
+    font-family: Helvetica, sans-serif;
+    text-align: center;
+}
+
+.result {
+    margin-top: 30px;
+    font-size: 50px;
     color: blue;
     font-weight: bold;
     font-family: Helvetica, sans-serif;
