--- a/WD_PS2/Task3/css/style.css
+++ b/WD_PS2/Task3/css/style.css
@@ -42,7 +42,7 @@ body {
     margin-right: auto;
     text-align: center;
     background-color: deepskyblue;
-    width: 300px;
+    width: 500px;
     height: 40px;
     font-size: 30px;
     justify-content: center;
@@ -69,6 +69,15 @@ body {
 .answer {
     margin-top: 50px;
     font-size: 30px;
+    color: blue;
+    font-weight: bold;
+    font-family: Helvetica, sans-serif;
+    text-align: center;
+}
+
+.result {
+    margin-top: 30px;
+    font-size: 40px;
     color: blue;
     font-weight: bold;
     font-family: Helvetica, sans-serif;
