--- a/WD_PS2/Task2/css/style.css
+++ b/WD_PS2/Task2/css/style.css
@@ -1,5 +1,5 @@
 body {
-    margin: 50px;
+    margin: 30px;
 }
 
 * {
@@ -19,7 +19,7 @@ body {
 }
 
 .title {
-    font-size: 80px;
+    font-size: 40px;
     color: dodgerblue;
     font-weight: bold;
     font-family: Helvetica, sans-serif;
@@ -29,7 +29,7 @@ body {
 
 .title_of_input {
     margin: 40px 0 40px 0;
-    font-size: 40px;
+    font-size: 30px;
     color: deepskyblue;
     font-weight: bold;
     font-family: Helvetica, sans-serif;
@@ -69,6 +69,15 @@ body {
 .answer {
     margin-top: 50px;
     font-size: 30px;
+    color: blue;
+    font-weight: bold;
+    font-family: Helvetica, sans-serif;
+    text-align: center;
+}
+
+.result {
+    margin-top: 30px;
+    font-size: 40px;
     color: blue;
     font-weight: bold;
     font-family: Helvetica, sans-serif;
