--- a/WD_PS2/Task4/css/style.css
+++ b/WD_PS2/Task4/css/style.css
@@ -1,5 +1,5 @@
 body {
-    margin: 50px;
+    margin: 10px;
 }
 
 * {
@@ -19,7 +19,7 @@ body {
 }
 
 .title {
-    font-size: 80px;
+    font-size: 60px;
     color: dodgerblue;
     font-weight: bold;
     font-family: Helvetica, sans-serif;
@@ -28,7 +28,7 @@ body {
 }
 
 .title_of_input {
-    margin: 40px 0 40px 0;
+    margin: 20px 0 20px 0;
     font-size: 40px;
     color: deepskyblue;
     font-weight: bold;
@@ -49,7 +49,7 @@ body {
     align-items: center;
 }
 
-.button_calculate {
+.button_bild {
     margin-left: auto;
     margin-right: auto;
     background-color: darkgrey;
@@ -60,17 +60,17 @@ body {
     padding: 5px;
     border-radius: 5px;
     border: 2px solid #fff;
-    font-size: 55px;
+    font-size: 35px;
     font-weight: bolder;
     margin-top: 15px;
     justify-content: center;
 }
 
-.answer {
-    margin-top: 50px;
-    font-size: 30px;
-    color: blue;
-    font-weight: bold;
-    font-family: Helvetica, sans-serif;
-    text-align: center;
+.chessboard {
+    margin-top: 20px;
+    width: 50%;
+    border: 2px solid #000;
+    margin-left: auto;
+    margin-right: auto;
 }
+
