--- a/WD_PS2/Task5/css/style.css
+++ b/WD_PS2/Task5/css/style.css
@@ -1,5 +1,5 @@
 body {
-    margin: 50px;
+    margin: 10px;
 }
 
 * {
@@ -11,7 +11,6 @@ body {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    text-transform: uppercase;
     vertical-align: baseline;
     text-align: justify;
     align-content: baseline;
@@ -66,11 +65,12 @@ body {
     justify-content: center;
 }
 
-.answer {
-    margin-top: 50px;
-    font-size: 30px;
+.result {
+    margin-top: 10px;
+    font-size: 15px;
     color: blue;
     font-weight: bold;
     font-family: Helvetica, sans-serif;
     text-align: center;
+    cursor: pointer;
 }
