--- a/WD_PS2/Task6/css/style.css
+++ b/WD_PS2/Task6/css/style.css
@@ -11,7 +11,6 @@ body {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    text-transform: uppercase;
     vertical-align: baseline;
     text-align: justify;
     align-content: baseline;
@@ -37,6 +36,8 @@ body {
     flex-grow: 1;
 }
 
+
+
 .my_input {
     margin-left: auto;
     margin-right: auto;
@@ -49,28 +50,30 @@ body {
     align-items: center;
 }
 
-.button_calculate {
+.button_check {
     margin-left: auto;
     margin-right: auto;
     background-color: darkgrey;
     color: #3498db;
     cursor: pointer;
-    width: 400px;
-    height: 80px;
+    width: 200px;
+    height: 40px;
     padding: 5px;
     border-radius: 5px;
     border: 2px solid #fff;
-    font-size: 55px;
+    font-size: 25px;
     font-weight: bolder;
     margin-top: 15px;
     justify-content: center;
 }
 
-.answer {
-    margin-top: 50px;
-    font-size: 30px;
+.result {
+    margin-top: 10px;
+    font-size: 20px;
     color: blue;
     font-weight: bold;
     font-family: Helvetica, sans-serif;
     text-align: center;
 }
+
+
