--- a/GoT/css/style.css
+++ b/GoT/css/style.css
@@ -12,7 +12,7 @@ body {
     display: flex;
     flex-direction: row;
     flex-grow: 1;
-    height: 100%;
+    height: -webkit-fill-available;
 
 }
 
@@ -155,7 +155,7 @@ body {
     height: 25px;
     width: 25px;
     border-radius: 10%;
-    background-color: #eee;
+    background-color: #d3bb89;
 }
 
 .container:hover input ~ .checkbox {
