--- a/GoT/css/style.css
+++ b/GoT/css/style.css
@@ -155,7 +155,7 @@ body {
     height: 25px;
     width: 25px;
     border-radius: 10%;
-    background-color: #d3bb89;
+    background-color: #eee;
 }
 
 .container:hover input ~ .checkbox {
