--- a/WD_PS1/Task3/css/style.css
+++ b/WD_PS1/Task3/css/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
 }
 
@@ -66,22 +70,24 @@ nav li {
 
 .wrapper .content .content_top {
     display: flex;
-    height: 800px;
+    height: 100vh;
     background-color: #16a085;
 
 }
 
 .wrapper .content_top .column_left {
-    margin-top: 100px;
     width: 50%;
     display: flex;
     padding-right: 10%;
     justify-content: flex-end;
+    align-items: center;
 }
 
 .wrapper .content_top .column_left .image {
     margin-right: 10px;
     overflow: hidden;
+    height: auto;
+    width: 50%;
 }
 
 .wrapper .content .content_top .column_right {
@@ -124,9 +130,6 @@ nav li {
     justify-content: center;
 }
 
-.image {
-    height: 600px;
-}
 
 .wrapper .content .content_top .column:last-of-type {
     color: #fff;
@@ -137,14 +140,18 @@ nav li {
 .wrapper .content .content_center {
     display: flex;
     flex-direction: row;
-    height: auto;
+    height: 100vh;
     text-align: center;
-    justify-content: center;
-    margin: 50px;
+    justify-content: space-evenly;
+
 }
 
 .wrapper .content .content_center .column {
-    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 30%;
+    justify-content: center;
 }
 
 .fa {
@@ -167,7 +174,7 @@ nav li {
 
 .wrapper .content .content_bottom {
     background-color: #1abc9c;
-    height: 800px;
+    height: 100vh;
     width: 100%;
     font-size: 40px;
     color: #fff;
