--- a/WD_PS1/Task2/css/style.css
+++ b/WD_PS1/Task2/css/style.css
@@ -20,7 +20,7 @@ body {
 .content {
     display: flex;
     border: 5px solid #ff3366;
-    height: 1000px;
+    height: 85vh;
     overflow: hidden;
 }
 
