--- a/WD_PS1/Task3/css/style.css
+++ b/WD_PS1/Task3/css/style.css
@@ -174,7 +174,7 @@ nav li {
 
 .wrapper .content .content_bottom {
     background-color: #1abc9c;
-    height: 100vh;
+    height: auto;
     width: 100%;
     font-size: 40px;
     color: #fff;
@@ -182,15 +182,17 @@ nav li {
     align-items: center;
     justify-content: center;
     text-align: center;
+    padding-top: 3%;
+    padding-bottom: 5%;
 }
 
-.wrapper .content .content_bottom .form_question .button_submit {
+ .buttons {
     display: flex;
     color: #fff;
     background-color: #1abc9c;
     cursor: pointer;
-    width: 20%;
-    height: 60px;
+    width: 40%;
+    height: 10%;
     padding: 5px;
     border-radius: 5px;
     border: 2px solid #fff;
@@ -199,21 +201,59 @@ nav li {
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-left: 40%;
-    margin-right: 60%;
 }
 
 .myInput {
-    width: 800px;
+    width: 50%;
     height: 40px;
+    margin-left: 25%;
+    margin-right: 25%;
+    font-size: 15px;
 }
 
 .myQuestion {
     color: #000;
     margin-top: 15px;
-    width: 800px;
+    width: 50%;
     height: 200px;
     vertical-align: text-top;
     margin-bottom: 15px;
+    margin-left: 25%;
+    margin-right: 25%;
+    font-size: 15px;
+}
 
+.checkbox {
+    width: 50%;
+    height: 20px;
+    margin-left: 25%;
+    margin-right: 25%;
+    font-size: 25px;
+}
+
+.label {
+    font-size: 18px;
+}
+
+.my-form {
+    font-size: 15px;
+}
+
+.my-gender {
+    display: flex;
+    flex-direction: row;
+    font-size: 25px;
+    margin-left: 35%;
+    margin-right: 35%;
+    width: 30%;
+    justify-content: space-between;
+}
+
+.block-buttons {
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: 25%;
+    margin-right: 25%;
 }
