wd_ps2 task 4, table-task fixed

--- a/WD_PS2/Table_task/css/style.css
+++ b/WD_PS2/Table_task/css/style.css
@@ -3,22 +3,18 @@ body {
 }
 
 .container {
-    margin-top: 2rem
+    margin-top: 2rem;
 }
 
 .container .panel {
     width: 600px;
 }
 
-.field-is-horizontal {
-    width: 100%
-}
-
-.select {
+.field, .is-horizontal, .select, .select-filter, #select {
     width: 100%;
 }
 
-.select-filter {
-    width: 100%;
+#title-category, #title-name {
+    cursor: pointer;
 }
 
