wd_ps3 intermediate option

--- a/WD_PS3/Select/css/style.css
+++ b/WD_PS3/Select/css/style.css
@@ -9,6 +9,7 @@ body {
 }
 
 .dropdown {
+    position: absolute;
     display: block;
     width: 15em;
     left: -5em;
@@ -41,3 +42,4 @@ img {
     top: 22px;
     right: 25px;
 }
+
