wd_ps3 checked select

--- a/WD_PS3/Select/css/style.css
+++ b/WD_PS3/Select/css/style.css
@@ -10,7 +10,8 @@ body {
 
 .dropdown {
     position: absolute;
-    display: block;
+    display: flex;
+    flex-direction: column;
     width: 15em;
     left: -5em;
     cursor: pointer;
