--- a/WD_PS4/CSS/style.css
+++ b/WD_PS4/CSS/style.css
@@ -11,11 +11,15 @@ body {
 .container {
     margin-top: 3%;
     width: 100%;
+    border: 2px solid white;
 }
 
 .content-center {
+    display: block;
     color: white;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .input-value {
@@ -28,3 +32,24 @@ body {
     align-items: center;
 }
 
+.board-for-chess {
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.black {
+    width: 50px;
+    height: 50px;
+    background: black;
+}
+
+.white {
+    width: 50px;
+    height: 50px;
+    background: white;
+}
