--- a/WD_PS4/warm up/css/style.css
+++ b/WD_PS4/warm up/css/style.css
@@ -54,3 +54,27 @@ body {
     height: 50px;
     background: white;
 }
+
+.board-for-files {
+    background-color: white;
+    width: 20%;
+    overflow: auto;
+    min-height: 150px;
+    max-height: 300px;
+}
+
+.board-for-icon {
+    display: flex;
+}
+
+.board-for-icon {
+    margin-bottom: 10px;
+}
+
+.board-for-icon img {
+    width: 100px;
+}
+
+.board-for-text {
+    margin-top: 30px;
+}
