WD_ST2 completed

--- a/WD_PS2/Table_task/css/style.css
+++ b/WD_PS2/Table_task/css/style.css
@@ -2,11 +2,11 @@ body {
 
 }
 
-.container {
+.header-container {
     margin-top: 2rem;
 }
 
-.container .panel {
+.header-container .panel {
     width: 600px;
 }
 
