--- a/WD_PS2/Task4/css/style.css
+++ b/WD_PS2/Task4/css/style.css
@@ -6,7 +6,7 @@ body {
     box-sizing: border-box;
 }
 
-.container {
+.header-container {
     height: fit-content;
     flex-grow: 1;
     display: flex;
