--- a/WD_PS4/warm up/css/style.css
+++ b/WD_PS4/warm up/css/style.css
@@ -8,7 +8,7 @@ body {
     flex-direction: column;
 }
 
-.container {
+.header-container {
     margin-top: 3%;
     width: 100%;
     border: 2px solid white;
